--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body onload="load()">
+    <canvas id="full"></canvas>
     <script src="./js/dataset.js"></script>
     <script src="./js/chart.js"></script>
     <script src="./js/fun.js"></script>
