--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 </head>
 <body onload="load()">
     <canvas id="full"></canvas>
-    <script src="./js/dataset.js"></script>
-    <script src="./js/chart.js"></script>
+    <script src="./js/libs/other_libs/chart.js"></script>
+
+    <script src="./js/libs/my_libs/wolf.js"></script>
+    <script src="./js/libs/my_libs/dates_map.js"></script>
+    <script src="./js/libs/my_libs/float_map.js"></script>
+    <script src="./js/libs/my_libs/plot.js"></script>
+    <script src="./js/libs/my_libs/matrix.js"></script>
+    <script src="./js/libs/my_libs/curve_master.js"></script>
+
+    <script src="./js/dataset/dataset.js"></script>
+
     <script src="./js/fun.js"></script>
-    <script src="./js/plot.js"></script>
-    <script src="./js/date_conv.js"></script>
-    <script src="./js/data_clean.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
