--- a/data.html
+++ b/data.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="index.html"><img class='logo' src="./imgs/logo.png" alt="logo"></a></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="data.html">Data Analytics</a></li>
+            <li><a href="data.html">Analytics</a></li>
             <li><a href="docs.html">Docs</a></li>
         </ul>
     </header>
