--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dogie Predictor</title>
+    <title>Home | Dogie Predictor</title>
     <link id="favicon" rel="shortcut icon" type="image/png" href="./imgs/logo.png" src="./imgs/logo.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body >
+    <style>
+        .Box{
+            height: 78%;
+        }
+        .but{
+            top:35%
+        }
+        .input{
+            top:10%;
+        }
+    </style>
     <script src="./js/fun.js"></script>
     <script src="./js/libs/my_libs/dates_map.js"></script>
     <script src="./js/predictor.js"></script>
     <script src="./js/main.js"></script>
     
-    <div style='background-image:url("./imgs/backgroud.jpg")' class="body">
+    <div style='background-image:url("./imgs/backgroud.jpg");background-repeat: no-repeat;background-size: cover;opacity: 0.85;width: 100vw;height: 100vh;z-index: -1;' class="body">
         <div class="nav">
             <ul class="nav">
                 <li><a href="index.html"><img class='logo' src="./imgs/logo.png" alt="logo"></a></li>
