--- a/data.html
+++ b/data.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dogie Data</title>
+    <title>Dogie Data Analytics</title>
     <link id="favicon" rel="shortcut icon" type="image/png" href="./imgs/logo.png" src="./imgs/logo.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body onload="load(1,4)" style="overflow-y: visible;">
-    <header>
-        <ul>
+    <style>
+        .nav{
+            width: 100%;
+            margin-left: 0;
+            float: right;
+            padding-bottom: 5%;
+        }
+        .nav>li{
+            margin-left: 10%;
+        }
+    </style>
+        <ul class="nav">
             <li><a href="index.html"><img class='logo' src="./imgs/logo.png" alt="logo"></a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="data.html">Analytics</a></li>
-            <li><a href="docs.html">Docs</a></li>
+            <li class="item"><a href="index.html">Home</a></li>
+            <li  class="item"><a href="data.html">Analytics</a></li>
+            <li  class="item"><a href="docs.html">Docs</a></li>
         </ul>
-    </header>
     <canvas id="full"></canvas>
     <script src="./js/libs/other_libs/chart.js"></script>
 
